Prevent images inside al-field widget editor from being too tall

--- a/assets/stylesheets/chimera/chimera.scss
+++ b/assets/stylesheets/chimera/chimera.scss
@@ -562,3 +562,12 @@ al-field[mode="inline"] {
 		}
 	}
 }
+
+al-field {
+	// Don't let images in widgets take up more then 1/4th of the screen height
+	al-widget {
+		img {
+			max-height: 25vh;
+		}
+	}
+}
